--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       join our movement, sign up for our official email list now.
     </p>
 
+    <img src="images/kitten.jpg" alt="An adorable kitten">
+
     <h2>Background</h2>
 
     <h2>Founders</h2>
