--- a/index.html
+++ b/index.html
@@ -30,5 +30,55 @@
 
     <h3>Nick Merwin</h3>
 
+    <h2>Inline Elements</h2>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+        <th>Example</th>
+        <th>Result</th>
+      </tr>
+      <tr>
+        <td><code>em</code></td>
+        <td>emphasized</td>
+        <td>make emphasized text</td>
+        <td><code><em>technical sophistication</em></code></td>
+        <td><em>technical sophistication</em></td>
+      </tr>
+      <tr>
+        <td><code>strong</code></td>
+        <td>strong</td>
+        <td>make strong text</td>
+        <td>
+          <code><strong>at least a billion people</strong></code>
+        </td>
+        <td>FILL_IN</td>
+      </tr>
+      <tr>
+        <td><code>a</code></td>
+        <td>anchor</td>
+        <td>make hyperlink</td>
+        <td>
+          <code>
+            <a href="http://learnenough.com/">Learn Enough</a>
+          </code>
+        </td>
+        <td>FILL_IN</td>
+      </tr>
+      <tr>
+        <td><code>img</code></td>
+        <td>image</td>
+        <td>include an image</td>
+        <td>
+          <code>
+            <img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl">
+          </code>
+        </td>
+        <td>FILL_IN</td>
+      </tr>
+    </table>
+
   </body>
 </html>
